[metadata]
name = harley-manual
version = 0.1
description = Automatically download and merge Harley Davidson owner manual PDFs into a single document
long_description = file: README.md, LICENSE
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
packages=harley_manual
install_requires =
    BeautifulSoup4
    progress
    PyPDF2
    requests

[options.entry_points]
console-scripts =
    harley-manual = harley_manual:merge_manual

[flake8]
extend-ignore =
    # Ignore f-strings, we like them:
    SFS301,